# code/router.js.go
@@ -2,18 +2,48 @@ package code
 
 import (
 	"github.com/gin-gonic/gin"
+	ginSwagger "github.com/swaggo/gin-swagger"
+	"github.com/swaggo/gin-swagger/swaggerFiles"
+	"log"
 	"mlz/code/controllers"
+	"mlz/conf"
+	"net/http"
+	_ "net/http/pprof"
+	"strconv"
 )
 
-func InitRouters(router  *gin.Engine) {
+func InitRouters() {
+	router := gin.Default()
+	c:= controllers.DemoController{}
 
+	if conf.AppConfigObject.RunMode=="dev"{
+		//注册swagger访问地址   /docs/index.html
+		router.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+
+		// 调试模式 ,查看内存占用之类的
+		if conf.AppConfigObject.DebugPort==0 {conf.AppConfigObject.DebugPort=7234}
+		go func() {
+			log.Fatal(http.ListenAndServe("0.0.0.0:"+ strconv.Itoa(conf.AppConfigObject.DebugPort), nil))
+		}()
+
+	}else{
+		gin.SetMode(gin.ReleaseMode)
+	}
+
+
+	//随便注册一个主页的路由, 因为是api项目,不展示网页. 前端用VUE即可
+	router.GET("/", func(c *gin.Context) {
+		c.JSON(200, gin.H{
+			"message": "this is  API HOST",
+		})
+	})
 
 // 接口组 无需授权的接口
 	g:=router.Group("/api")
 	{
 
 		g.POST("/index", func(context *gin.Context) {
-			c:= controllers.DemoController{}
+
 			c.Index(context)
 		})
 
@@ -28,7 +58,7 @@ func InitRouters(router  *gin.Engine) {
 
 		demo:=g1.Group("/demo")
 		{
-			c:= controllers.DemoController{}
+
 			demo.POST("/index", func(context *gin.Context) {
 				c.Index(context)
 			})
@@ -44,5 +74,5 @@ func InitRouters(router  *gin.Engine) {
 
 
 
-
+	router.Run(":"+ strconv.Itoa(conf.AppConfigObject.WebConfig.Port)) // listen and serve on 0.0.0.0:8080
 }
